tests/parse-errors/unclosed_block.sysc
func foo()
  while true
    while true
